# Tarefa19Ebac

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_main.py
